<resources>
    <string name="app_name">Number Sequence Trainer</string>
    <string name="version_prefix" translatable="false">v.</string>
    <string name="play_button">Play</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="about_button">About</string>
    <string name="licenses">Licenses</string>
    <string name="button_statistics">Statistics</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_1">Easy</string>
    <string name="difficulty_2">Medium</string>
    <string name="difficulty_3">Hard</string>
    <string name="surrender">Surrender</string>
    <string name="surrender_confirmation">Yes, surrender</string>
    <string name="surrender_message">Are you sure you want to surrender and proceed to the next sequence?</string>
    <string name="answer">Answer</string>
    <string name="cancel">Cancel</string>
    <string name="correct_solution">was the correct answer</string>
    <string name="correct_answer">is correct!</string>
    <string name="wrong_answer">is wrong. Try again!</string>
    <string name="next_sequence">Next Sequence</string>
    <string name="generic_error_message">Something went wrong!</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="no_data_available">No data available</string>
    <string name="success_rate">Success Rate</string>
    <string name="number_of_sequences">Number of sequences</string>
    <string name="failed_attempts">Average failed attempts per sequence</string>
    <string name="about_text">The number sequence trainer android app is open source and available on github. In case you experience an issue or would like to request a feature please open an issue on <a href="https://github.com/achawki/number-sequence-trainer-android/issues">https://github.com/achawki/number-sequence-trainer-android</a>.\n\nMore information about the privacy policy: <a href="https://github.com/achawki/number-sequence-trainer-android/blob/main/playstore/Privacy_policy.md">https://github.com/achawki/number-sequence-trainer-android/blob/main/playstore/Privacy_policy.md</a></string>
    <string name="reset_statistics">Reset Statistics</string>
    <string name="reset_statistics_confirmation">Are you sure you want to reset all statistics? This action cannot be undone.</string>
    <string name="reset">Reset</string>
</resources>