<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/difficulty"
        android:textSize="25sp" />

    <android.widget.Space
        android:layout_width="8dp"
        android:layout_height="match_parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="3" />
</LinearLayout>