<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SequenceTrainerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSecondary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/txtView_sequence"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        android:id="@+id/txtView_solution_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/txtView_sequence"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittxtlayout_solution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:layout_marginTop="150dp"
        app:endIconDrawable="@drawable/ic_baseline_send_24"
        app:endIconMode="custom"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintRight_toLeftOf="@id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtView_sequence"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintWidth_percent="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittxt_solution"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_surrender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/surrender"
        android:layout_marginTop="150dp"
        app:backgroundTint="@color/tomato"
        app:icon="@drawable/ic_baseline_cancel_schedule_send_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center"
        app:layout_constraintTop_toBottomOf="@id/txtView_sequence"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>